--- a/loader.conf
+++ b/loader.conf
@@ -3,7 +3,7 @@ security.bsd.allow_destructive_dtrace=0
 
 ## CONSOLE & BOOT
 boot_mute=NO
-beastie_disable="YES"
+beastie_disable="NO"
 autoboot_delay="3"
 hw.usb.no_boot_wait=1
 hw.snd.vpc_autoreset=0
@@ -12,8 +12,6 @@ hw.usb.no_pf=1
 hw.usb.no_shutdown_wait=1
 
 ## MODULES
-## Change to nvidia_load="YES" if you use legacy GeForce, GT or Titan series card.
-nvidia-modeset_load="YES"
 ahci_load="YES"
 cuse_load="YES"
 ums_load="YES"
